Started writing edge-expansion result

--- a/alantree.bib
+++ b/alantree.bib
@@ -17,3 +17,45 @@
    year = 2001,
 } 
 
+@Article{martinsson:unoriented,
+   author = {Anders Martinsson},
+   title = {Unoriented First-Passage Percolation on the $n$-Cube},
+   journal = {The Annals of Applied Probability},
+   volume = 26,
+   number = 5,
+   pages = {2597--2625},
+   year = {2016}
+}
+
+@InCollection{bollobas.kohayakawa:on,
+   author = {B{\'e}la Bollob{\'a}s and Yoshiharu Kohayakawa},
+   title = {On Richardson's Model on the Hypercube},
+   booktitle = {Combinatorics, Geometry, and Probability (Cambridge 1993)},
+   pages = {129--137},
+   publisher = {Cambridge University Press},
+   year = {1997}
+}
+
+
+@article{devroye:branching,
+  author    = {Luc Devroye},
+  title     = {Branching Processes in the Analysis of the Heights of Trees},
+  journal   = {Acta Informatica},
+  volume    = {24},
+  number    = {3},
+  pages     = {277--298},
+  year      = {1987},
+  url       = {http://dx.doi.org/10.1007/BF00265991},
+}
+
+@article{pittel:note,
+  author    = {Boris Pittel},
+  title     = {Note on the Heights of Random Recursive Trees and Random m-ary Search
+               Trees},
+  journal   = {Random Struct. Algorithms},
+  volume    = {5},
+  number    = {2},
+  pages     = {337--348},
+  year      = {1994},
+  url       = {http://dx.doi.org/10.1002/rsa.3240050207},
+}
